<resources>
    <string name="app_name">Detail Module</string>
    <string name="lokasi">Lokasi</string>
    <string name="catatan">Catatan</string>
    <string name="gambar_jalanan_yang_rusak">Gambar jalanan yang rusak</string>
    <string name="kirimkan_laporan">Kirimkan Laporan</string>
    <string name="tambahkan_foto">Tambahkan Foto</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="ini_merupakan_gambar_jalan">Ini merupakan gambar jalan</string>
    <string name="tambahkan_foto_detail">Tambahkan Foto Detail</string>
    <string name="gambar_detail_kerusakan">gambar detail kerusakan</string>
    <string name="lokasi_saya">Lokasi Saya</string>
</resources>