<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_image_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.imagemain.ImageMainActivity">
    <ImageView
        android:id="@+id/img_main"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:contentDescription="@string/ini_merupakan_gambar_jalan"
        android:src="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/btn_foto_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_foto_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button"
        android:text="@string/tambahkan_foto"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:visibility="invisible"
        android:id="@+id/btn_next_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/round_button"
        android:text="@string/selanjutnya"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>